--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+// $primary-color: #02aab0;
+// $secondary-color: #00cdac;
+$primary-color: #0f52ba;
+$secondary-color: #007fff;
 
 $white-color: #fff;
 
